--- a/style.css
+++ b/style.css
@@ -106,12 +106,11 @@ text-align: left;
 .picture {
     height: 500px;
     max-height: 500px;
-    background-image: url(/Users/christinaball/WEBSITE/images/DSC_0150.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    margin-left: 90px;
     top: 500px;
+    margin: auto;
     display: block;
 }
 
