--- a/style.css
+++ b/style.css
@@ -342,6 +342,7 @@ text-align: left;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     grid-gap: 30px;
+    float: right;
 }
 
 .img-gallery2{
